--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>JNTUK_Instant</title>
+    <title>BHARATH COLLAGE PDF'S</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="license" href="LICENSE">
    
@@ -25,7 +25,7 @@
    <header>
      <div class="logo_block header_floats">
        <div class="top-logo_block">
-         <h1 id="heading1">JNTUK</h1>
+         <h1 id="heading1">BHARATH</h1>
          <h1 id="heading2">Instant Notes</h1>
        </div>
        <div class="bottom-logo_block">
