--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
          <h1 id="heading2">Instant Notes</h1>
        </div>
        <div class="bottom-logo_block">
-         <p>Contains Study-Materials for B.E./B.Tech students of JNTU-Kakinada affliated Colleges</p>
+         <p>CONTAINS PDF'S FOR BHARATH COLLAGE STUDENTS</p>
        </div>
      </div>
 
@@ -47,7 +47,7 @@
              </div>
              <div>
                <p>This Site is Open-Source</p>
-               <p>Contribute through <a href="https://github.com/JNTUK-Instant">GitHub</a></p>
+               
              </div>
            </div>
          </div>
