--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="license" href="LICENSE">
    
     <meta name="author" content="The-UCS-Variable">
-    <meta name="description" content="Contains Study-Materials for B.E./B.Tech for JNTU-Kakinada affliated Colleges">
+    <meta name="description" content="contains pdf's for bharath collage students">
     <link rel="icon" href="Styles/favicon.ico">
     <link rel="stylesheet" type="text/css" href="Styles/layout.css">
     <link rel="stylesheet" type="text/css" href="Styles/index.css">
