--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
              <div>
                <p>Welcome</p>
                <p>To</p>
-               <p>JNTUK-Instant!</p>
+               <p>BHARATH COLLAGE PDF'S</p>
              </div>
              <div class="carousel-img">
                <img src="Styles/quote.jpg" alt="quote">
