--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>BHARATH COLLAGE PDF'S</title>
+    <title>BHARATH COLLAGE PDF'S----</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="license" href="LICENSE">
    
