--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
          <h1 id="heading2">Instant Notes</h1>
        </div>
        <div class="bottom-logo_block">
-         <p>CONTAINS PDF'S FOR BHARATH COLLAGE STUDENTS</p>
+         <p>CONTAINS PDF'S FOR BHARATH COLLAGE STUDENTS                
+          devoloped by SRINU
+         </p>
        </div>
      </div>
 
@@ -39,6 +41,7 @@
            <div class="carousel">
              <div>
                <p>Welcome</p>
+
                <p>To</p>
                <p>BHARATH COLLAGE PDF'S</p>
              </div>
