--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="The-UCS-Variable">
     <meta name="description" content="contains pdf's for bharath collage students">
     <link rel="icon" href="Styles/favicon.ico">
-    <link rel="stylesheet" type="text/css" href="layout.css">
+    <link rel="stylesheet" type="text/css" href="style2.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="packs/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="packs/slick/slick-theme.css"/>
