--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <link rel="icon" href="Styles/favicon.ico">
     <link rel="stylesheet" type="text/css" href="style2.css">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+    <link rel="stylesheet" type="text/css" href="slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick-theme.css"/>
 
     <script defer src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script defer src="https://code.jquery.com/jquery-migrate-3.3.0.min.js" integrity="sha256-wZ3vNXakH9k4P00fNGAlbN0PkpKSyhRa76IFy4V1PYE=" crossorigin="anonymous"></script>
-    <script defer src="packs/slick/slick.min.js"></script>
+    <script defer src="slick.min.js"></script>
     <script defer src="index.js"></script>
     <script defer src="common.js"></script>
   </head>
@@ -46,7 +46,7 @@
                <p>BHARATH COLLAGE PDF'S</p>
              </div>
              <div class="carousel-img">
-               <img src="Styles/quote.jpg" alt="quote">
+               <img src="quote.jpg" alt="quote">
              </div>
              <div>
                <p>This Site is Open-Source</p>
