--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
      <div class="logo_block header_floats">
        <div class="top-logo_block">
          <h1 id="heading1">BHARATH</h1>
-         <h1 id="heading2">Instant Notes</h1>
+         <h1 id="heading2">COLLAGE Notes</h1>
        </div>
        <div class="bottom-logo_block">
          <p>CONTAINS PDF'S FOR BHARATH COLLAGE STUDENTS                
@@ -81,7 +81,7 @@
         </marquee>
      </div>
      <div class="branch_block">
-       <h2>AVAILABLE BRANCH/h2>
+       <h2>AVAILABLE BRANCHS>
        <div class="branch_cards_block">
          <div class="the_card">
            <a class="card_content">
