--- a/about.html
+++ b/about.html
@@ -7,12 +7,12 @@
     <link rel="license" href="LICENSE">
 
     <meta name="author" content="The-UCS-Variable">
-    <meta name="description" content="About the website: JNTUK-Instant">
+    <meta name="description" content="About the website: bharath collage ">
     <link rel="icon" href="Styles/favicon.ico">
-    <link rel="stylesheet" type="text/css" href="Styles/layout.css">
-    <link rel="stylesheet" type="text/css" href="Styles/about.css">
-    <link rel="stylesheet" type="text/css" href="packs/slick/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="packs/slick/slick-theme.css"/>
+    <link rel="stylesheet" type="text/css" href="Style.css">
+    <link rel="stylesheet" type="text/css" href="Style2.css">
+    <link rel="stylesheet" type="text/css" href="slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick-theme.css"/>
 
     <script defer src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script defer src="https://code.jquery.com/jquery-migrate-3.3.0.min.js" integrity="sha256-wZ3vNXakH9k4P00fNGAlbN0PkpKSyhRa76IFy4V1PYE=" crossorigin="anonymous"></script>
@@ -24,11 +24,11 @@
   <header>
     <div class="logo_block header_floats">
       <div class="top-logo_block" onclick="document.location='/'">
-        <h1 id="heading1">JNTUK</h1>
-        <h1 id="heading2">Instant Notes</h1>
+        <h1 id="heading1">bharath</h1>
+        <h1 id="heading2">collage</h1>
       </div>
       <div class="bottom-logo_block">
-        <p>Contains Study-Materials for B.E./B.Tech students of JNTU-Kakinada affliated Colleges</p>
+        <p></p>
       </div>
     </div>
 
@@ -39,7 +39,7 @@
             <div>
               <p>Welcome</p>
               <p>To</p>
-              <p>JNTUK-Instant!</p>
+              <p></p>
             </div>
             <div class="carousel-img">
               <img src="Styles/quote.jpg" alt="quote">
