--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
              <div>
                <p>Welcome</p>
                <div class="">
-               <img src="gpic.jpg" >
+               <img src="pic.jpg" >
              </div>
            
 
