--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
                <p>Welcome</p>
                <div class="">
                <img src="pic.jpg" >
+                 img{
+                 width:200px;
+                 height:200px;
+                 }
              </div>
            
 
