--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </div>
        </div>
      </div>
-     <div class="progresss"><img src="https://img.shields.io/badge/Web Progress%3A-44%25-red"></div>
+     <div class="progresss"><img src="web in process"></div>
    </main>
   <!-- main end -->
 
