--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </div>
        </div>
      </div>
-     <div class="progresss"><img src="web in process"></div>
+     <div ></div>
    </main>
   <!-- main end -->
 
