--- a/about.html
+++ b/about.html
@@ -2,17 +2,17 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>About | JNTUK_Instant</title>
+    <title>About | bharath collage</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="license" href="LICENSE">
 
     <meta name="author" content="The-UCS-Variable">
     <meta name="description" content="About the website: bharath collage ">
     <link rel="icon" href="Styles/favicon.ico">
-    <link rel="stylesheet" type="text/css" href="Style.css">
-    <link rel="stylesheet" type="text/css" href="Style2.css">
-    <link rel="stylesheet" type="text/css" href="slick.css"/>
-    <link rel="stylesheet" type="text/css" href="slick-theme.css"/>
+    <link rel="stylesheet" type="css" href="Style.css">
+    <link rel="stylesheet" type="css" href="Style2.css">
+    <link rel="stylesheet" type="css" href="slick.css"/>
+    <link rel="stylesheet" type="css" href="slick-theme.css"/>
 
     <script defer src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script defer src="https://code.jquery.com/jquery-migrate-3.3.0.min.js" integrity="sha256-wZ3vNXakH9k4P00fNGAlbN0PkpKSyhRa76IFy4V1PYE=" crossorigin="anonymous"></script>
@@ -46,7 +46,7 @@
             </div>
             <div>
               <p>This Site is Open-Source</p>
-              <p>Contribute through <a href="https://github.com/JNTUK-Instant">GitHub</a></p>
+              <p>Contribute through <a href="https://srinu1947.github.io/Bharat_instant/">GitHub</a></p>
             </div>
           </div>
         </div>
@@ -67,8 +67,8 @@
       <h2>Currently, This is a template Page for this website</h2>
       <p>-- This is the Main Section --</p>
       <p>Website Designed by: <a href="https://github.com/The-UCS-Variable">The-UCS-Variable</a></p>
-      <p>Idea by: <a href="https://github.com/Phani-E650">Phani-E650</a></p>
-      <p><a href="https://github.com/JNTUK-Instant" target="_blank"> -_- </a></p>
+      <p>Idea by: <a href="https://github.com/SRINU">SRINU</a></p>
+      <p><a href="https://srinu1947.github.io/Bharat_instant/" target="_blank"> -_- </a></p>
     </main>
   <!-- main end ----------------->
 
