--- a/contribute.html
+++ b/contribute.html
@@ -2,17 +2,17 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Contribute | JNTUK_Instant</title>
+    <title>Contribute | BHARATH COLLAGE</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="license" href="LICENSE">
 
     <meta name="author" content="The-UCS-Variable">
     <meta name="description" content="Contribute knowledge to JNTUK-Instant">
     <link rel="icon" href="Styles/favicon.ico">
-    <link rel="stylesheet" type="text/css" href="Styles/layout.css">
-    <link rel="stylesheet" type="text/css" href="Styles/contribute.css">
-    <link rel="stylesheet" type="text/css" href="packs/slick/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="packs/slick/slick-theme.css"/>
+    <link rel="stylesheet" type="text/css" href="layout.css">
+    <link rel="stylesheet" type="text/css" href="contribute.css">
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
 
     <script defer src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script defer src="https://code.jquery.com/jquery-migrate-3.3.0.min.js" integrity="sha256-wZ3vNXakH9k4P00fNGAlbN0PkpKSyhRa76IFy4V1PYE=" crossorigin="anonymous"></script>
@@ -24,11 +24,11 @@
   <header>
     <div class="logo_block header_floats">
       <div class="top-logo_block" onclick="document.location='/'">
-        <h1 id="heading1">JNTUK</h1>
-        <h1 id="heading2">Instant Notes</h1>
+        <h1 id="heading1">BHARATH</h1>
+        <h1 id="heading2">COLLAGE NOTES</h1>
       </div>
       <div class="bottom-logo_block">
-        <p>Contains Study-Materials for B.E./B.Tech students of JNTU-Kakinada affliated Colleges</p>
+        <p>Contains Study-Materials for B.E./B.Tech students of BHARATH College</p>
       </div>
     </div>
 
@@ -39,14 +39,14 @@
             <div>
               <p>Welcome</p>
               <p>To</p>
-              <p>JNTUK-Instant!</p>
+              <p>BHARATH COLLAGE!</p>
             </div>
             <div class="carousel-img">
               <img src="Styles/quote.jpg" alt="quote">
             </div>
             <div>
               <p>This Site is Open-Source</p>
-              <p>Contribute through <a href="https://github.com/JNTUK-Instant">GitHub</a></p>
+              <p>Contribute through <a href="<li><a id="contribute" >GitHub</a></p>
             </div>
           </div>
         </div>
@@ -67,7 +67,7 @@
       <h2>This page isn't fully built yet</h2>
       <p>-- but --</p>
       <p>You can contribute to this Website design or Share study-Materials that you have with us through</p>
-      <p><a href="https://github.com/JNTUK-Instant" target="_blank"> here </a></p>
+      <p><a href="" target="_blank"> here </a></p>
     </main>
   <!-- main end ----------------->
 
