--- a/contribute.html
+++ b/contribute.html
@@ -7,7 +7,7 @@
     <link rel="license" href="LICENSE">
 
     <meta name="author" content="The-UCS-Variable">
-    <meta name="description" content="Contribute knowledge to JNTUK-Instant">
+    <meta name="description" content="Contribute knowledge">
     <link rel="icon" href="Styles/favicon.ico">
     <link rel="stylesheet" type="text/css" href="layout.css">
     <link rel="stylesheet" type="text/css" href="contribute.css">
