--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
        </div>
        <div class="bottom-logo_block">
          <p>CONTAINS PDF'S FOR BHARATH COLLAGE STUDENTS                
-          devoloped by SRINU
+          devoloped by SRINU NAGINEEDI
          </p>
        </div>
      </div>
@@ -87,13 +87,13 @@
        <div class="branch_cards_block">
          <div class="the_card">
            <a class="card_content">
-             <h1>CSE</h1>
+             <h1>DEVLOPING BY SRINU NAGINEEDI</h1>
            </a>
          </div>
          <div class="the_card">
            <a class="card_content" href="Branch/Info-Tech.html">
              <h1>IT</h1>
-             <p>avilable SOON</p>
+             <p>DEVLOPING BY SRINU NAGINEEDI </p>
            </a>
           </div>
        </div>
