--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
    <header>
      <div class="logo_block header_floats">
        <div class="top-logo_block">
-         <h1 id="heading1">BHARATH    </h1>
+         <h1 id="heading1">BHARATH         .</h1>
          <h1 id="heading2">COLLAGE Notes</h1>
        </div>
        <div class="bottom-logo_block">
@@ -87,7 +87,7 @@
        <div class="branch_cards_block">
          <div class="the_card">
            <a class="card_content">
-             <h1>DEVLOPING BY SRINU NAGINEEDI</h1>
+             <h1>DEVoloping</h1>
            </a>
          </div>
          <div class="the_card">
