--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
    <main>
      <div class="newsbar">
         <marquee id="marquee" behavior="scroll" direction="left" onmouseover="this.stop()" onmouseout="this.start()">
-          This Website is still in Beta | Contribute <a href=" https://srinu1947.github.io/Bharat_instant/">here</a> | We also accept Study Materials
+          This Website is still in Beta | Contribute <a href=" jntuk-note6.herokuapp.com">here</a> | We also accept Study Materials
         </marquee>
      </div>
      <div class="branch_block">
