--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
     <title>About | bharath collage</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="license" href="LICENSE">
+     <link rel="aboutcss" href="aboutcss">
+
 
     <meta name="author" content="The-UCS-Variable">
     <meta name="description" content="About the website: bharath collage ">
