--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <title>About | bharath collage</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="license" href="LICENSE">
-     <link rel="aboutcss" href="aboutcss">
+     <link rel="about.css" href="about.css">
 
 
     <meta name="author" content="The-UCS-Variable">
