--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="license" href="LICENSE">
      <link rel="about.css" href="about.css">
+    <link rel="stylesheet" type="text/css" href="about.css">
 
 
     <meta name="author" content="The-UCS-Variable">
