--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img src="https://image.freepik.com/free-vector/hiring-concept-illustration_114360-532.jpg" class="food-munch-logo" />
+                    <img src="https://tse2.mm.bing.net/th?id=OIP.yvN5tNGWzxYEiqiUffVwKwHaBe&pid=Api&P=0&w=495&h=99" class="food-munch-logo" />
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -61,11 +61,11 @@
         </nav>
         <div class="banner-section-bg-container d-flex justify-content-center flex-column">
             <div class="text-center">
-                <h1 class="banner-heading mb-3">BIHER PLACEMENT'S 2021-22</h1>
-                <p class="banner-caption mb-4">DREAM IT& CHASE IT</p>
-                <p class="para">This web is under maintaince by srinu (ECE)</p>
-                <button class="custom-button" onclick="display('sectionon')">ON CAMPUS?</button>
-                <button class="custom-outline-button" onclick="display('sectionoff')">OFF CAMPUS</button>
+                <h1 class="banner-heading mb-3">BIHER WEEK MAXINE </h1>
+                <p class="banner-caption mb-4"></p>
+                <p class="para">This APP is under maintaince by srinu (ECE)</p>
+                <button class="custom-button" onclick="display('sectionon')">latest news</button>
+                <button class="custom-outline-button" onclick="display('sectionoff')">old</button>
             </div>
         </div>
         <div class="wcu-section pt-5 pb-5">
