--- a/about.html
+++ b/about.html
@@ -72,6 +72,28 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
+                      
+    <div class="background-img d-flex flex-column justify-content-end">
+        <div class="card">
+            <p class="para">
+                NEWS OF THE DAY
+            </p>
+            <h1 class="heading">
+                All education institutions in assam to reopen from november2
+            </h1>
+            <p class="para">
+                uttarpradesh goutham budda nagar recorded 107 new covid-19 cases on saturday pussing the infection tally to 15803 official data showed
+                the number of active cases came down forther to 1384 from 1477 on friday on 1522 on tursday according to the data released by up helth
+                department for a 24hr period
+            </p>
+            <button class="button">
+                read more
+            </button>
+
+        </div>
+
+    </div>
+
                         <h1 class="wcu-section-heading">Why Choose Us?</h1>
                         <p class="wcu-section-description">
                             this site helps bharath collage students,to search job in differt companies ,on campus or outoff campus
