--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
        <div class="bottom-info_block">
          <ul>
            <li><a id="browse" class="nav_btns" href="#">Browse All</a></li>
-           <li><a id="about" class="nav_btns" href="about.html">About</a></li>
+           <li><a id="BHARATH WEEKLY MAXINE" class="nav_btns" href="about.html">About</a></li>
            <li><a id="contribute" class="nav_btns" href="contribute.html">Contribute</a></li>
          </ul>
        </div>
