--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
    <header>
      <div class="logo_block header_floats">
        <div class="top-logo_block">
-         <h1 id="heading1">BHARATH         .</h1>
-         <h1 id="heading2">COLLAGE Notes</h1>
+         <h1 id="heading1">BHARATH..</h1>
+         <h1 id="heading2">COLLEGE Notes</h1>
        </div>
        <div class="bottom-logo_block">
-         <p>CONTAINS PDF'S FOR BHARATH COLLAGE STUDENTS                
-          devoloped by SRINU NAGINEEDI
+         <p>CONTAINS PDF'S FOR BHARATH COLLEGE STUDENTS                
+          devoloped by SRINU ECE
          </p>
        </div>
      </div>
