--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
        <div class="bottom-info_block">
          <ul>
            <li><a id="browse" class="nav_btns" href="#">Browse All</a></li>
-           <li><a id="about" class="nav_btns" href="about.html">BHARATH WEEKLY MAXINE</a></li>
-           <li><a id="contribute" class="nav_btns" href="contribute.html">Contribute</a></li>
+           <li><a id="about" class="nav_btns" href="about.html">Biher weekly</a></li>
+           <li><a id="contribute" class="nav_btns" href="contribute.html">CGPA calculator</a></li>
          </ul>
        </div>
      </div>
