--- a/contribute.html
+++ b/contribute.html
@@ -1,83 +1,52 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Contribute | BHARATH COLLAGE</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="license" href="LICENSE">
+<html>
+  <body>
+<div class="calculator-box">
+        <h1>CGPA CALCULATOR</h1>
+        <p>
+          This CGPA Calculator is based on the BHARATH University grading
+          system.
+        </p>
 
-    <meta name="author" content="The-UCS-Variable">
-    <meta name="description" content="Contribute knowledge">
-    <link rel="icon" href="Styles/favicon.ico">
-    <link rel="stylesheet" type="text/css" href="layout.css">
-    <link rel="stylesheet" type="text/css" href="contribute.css">
-    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
-
-    <script defer src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script defer src="https://code.jquery.com/jquery-migrate-3.3.0.min.js" integrity="sha256-wZ3vNXakH9k4P00fNGAlbN0PkpKSyhRa76IFy4V1PYE=" crossorigin="anonymous"></script>
-    <script defer src="packs/slick/slick.min.js"></script>
-    <script defer src="Scripts/common.js"></script>
-  </head>
-<body>
- <div class="page_content">
-  <header>
-    <div class="logo_block header_floats">
-      <div class="top-logo_block" onclick="document.location='/'">
-        <h1 id="heading1">BHARATH</h1>
-        <h1 id="heading2">COLLAGE NOTES</h1>
-      </div>
-      <div class="bottom-logo_block">
-        <p>Contains Study-Materials for B.E./B.Tech students of BHARATH College</p>
-      </div>
-    </div>
-
-    <div class="info_block header_floats">
-      <div class="top-info_block">
-        <div class="carousel-container">
-          <div class="carousel">
-            <div>
-              <p>Welcome</p>
-              <p>To</p>
-              <p>BHARATH COLLAGE!</p>
-            </div>
-            <div class="carousel-img">
-              <img src="Styles/quote.jpg" alt="quote">
-            </div>
-            <div>
-              <p>This Site is Open-Source</p>
-              <p>Contribute through <a href="<li><a id="contribute" >GitHub</a></p>
-            </div>
-          </div>
+        <div id="course-wrapper">
+          <form class="key-0">
+            <p> <label id="course-row" for="courses">Courses:</label> 
+             <label id="credit-row" for="credit-units">Credit Units:</label>
+           <label id="grade-row" for="grade">Grades: </label></p>
+              <input
+                type="text"
+                placeholder="Course Code"
+                class="courses key-0"
+                required/>
+<!--               <label for="credit-units">Credit Units:</label> -->
+              <input
+                type="number"
+                class="credit-units key-0"
+                placeholder="Credit Units"
+                value=""
+                required
+              />
+<!--               <label for="grade">Grade: </label> -->
+              <select class="grade key-0" required>
+                <option class="grade" value="select">Select</option>
+                <option class="grade" value="5">A</option>
+                <option class="grade" value="4">B</option>
+                <option class="grade" value="3">C</option>
+                <option class="grade" value="2">D</option>
+                <option class="grade" value="1">E</option>
+                <option class="grade" value="0">F</option>
+              </select>
+          </form>
+        </div>
+        <!-- <section class"btn">+ Add Course</section> -->
+        <div class="btn">
+          <button onclick="addCourse()">+ Add Course</button>
+          <button onclick="removeCourse()">- Remove Course</button>
+          <button onclick="calcCgpa()">Calculate CGPA</button>
+        </div>
+        <div class="lastp">
+          <p id="cgpa-calc">Your CGPA is:</p>
         </div>
       </div>
-      <div class="bottom-info_block">
-        <ul>
-          <li><a id="browse" class="nav_btns" href="#">Browse All</a></li>
-          <li><a id="about" class="nav_btns" href="about.html">About</a></li>
-          <li><a id="contribute" class="nav_btns" href="contribute.html">Contribute</a></li>
-        </ul>
-      </div>
-    </div>
-  </header><hr class="hr_line">
-
-
-  <!-- main start --------------->
-    <main>
-      <h2>This page isn't fully built yet</h2>
-      <p>-- but --</p>
-      <p>You can contribute to this Website design or Share study-Materials that you have with us through</p>
-      <p><a href="" target="_blank"> here </a></p>
-    </main>
-  <!-- main end ----------------->
-
-
-  <hr class="hr_line">
-  <footer>
-    <p>Thanks!</p>
-    <p>(Such an Emptiness)</p>
-  </footer>
-
- </div>
 </body>
 </html>
+    
