--- a/contribute.html
+++ b/contribute.html
@@ -1,4 +1,7 @@
 <html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="contribute.css">
+  </head>
   <body>
 <div class="calculator-box">
         <h1>CGPA CALCULATOR</h1>
