--- a/contribute.html
+++ b/contribute.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="contribute.css">
+    <link rel="stylesheet" type="text/css" href="contribute.js">
   </head>
   <body>
 <div class="calculator-box">
