--- a/contribute.html
+++ b/contribute.html
@@ -1,7 +1,8 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="contribute.css">
-    <link rel="stylesheet" type="text/css" href="contribute.js">
+    
+    <script type="text/javascript" src="contribute.js"></script>
   </head>
   <body>
 <div class="calculator-box">
