--- a/contribute.html
+++ b/contribute.html
@@ -6,7 +6,7 @@
   </head>
   <body>
 <div class="calculator-box">
-        <h1>CGPA CALCULATOR</h1>
+        <h1>CGPA CALCULATOR BIHER </h1>
         <p>
           This CGPA Calculator is based on the BHARATH University grading
           system.
@@ -15,11 +15,11 @@
         <div id="course-wrapper">
           <form class="key-0">
             <p> <label id="course-row" for="courses">Courses:</label> 
-             <label id="credit-row" for="credit-units">Credit Units:</label>
+             <label id="credit-row" for="credit-units">Points:</label>
            <label id="grade-row" for="grade">Grades: </label></p>
               <input
                 type="text"
-                placeholder="Course Code"
+                placeholder="Subject Code"
                 class="courses key-0"
                 required/>
 <!--               <label for="credit-units">Credit Units:</label> -->
@@ -33,12 +33,12 @@
 <!--               <label for="grade">Grade: </label> -->
               <select class="grade key-0" required>
                 <option class="grade" value="select">Select</option>
-                <option class="grade" value="5">A</option>
-                <option class="grade" value="4">B</option>
-                <option class="grade" value="3">C</option>
-                <option class="grade" value="2">D</option>
-                <option class="grade" value="1">E</option>
-                <option class="grade" value="0">F</option>
+                <option class="grade" value="10">O</option>
+                <option class="grade" value="9">A+</option>
+                <option class="grade" value="8">A</option>
+                <option class="grade" value="7">B+</option>
+                <option class="grade" value="6">B</option>
+                <option class="grade" value="0"></option>
               </select>
           </form>
         </div>
