--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
          <div class="the_card">
            <a class="card_content" href="Branch/Info-Tech.html">
              <h1>IT</h1>
-             <p>DEVLOPING BY SRINU NAGINEEDI </p>
+             <p><a href="jntuk-note6.herokuapp.com">IT STUDYMETERIAL</a></p>
+
            </a>
           </div>
        </div>
