--- a/contribute.html
+++ b/contribute.html
@@ -38,7 +38,7 @@
                 <option class="grade" value="8">A</option>
                 <option class="grade" value="7">B+</option>
                 <option class="grade" value="6">B</option>
-                <option class="grade" value="0"></option>
+                <option class="grade" value="0">RA / AB</option>
               </select>
           </form>
         </div>
