--- a/index.html
+++ b/index.html
@@ -91,9 +91,10 @@
            </a>
          </div>
          <div class="the_card">
+                               <p><a href="http://jntuk-note6.herokuapp.com/">IT STUDYMETERIAL</a></p>
            <a class="card_content" href="Branch/Info-Tech.html">
              <h1>IT</h1>
-             <p><a href="jntuk-note6.herokuapp.com">IT STUDYMETERIAL</a></p>
+            
 
            </a>
           </div>
