--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
        </div>
        <div class="bottom-info_block">
          <ul>
-           <li><a id="browse" class="nav_btns" href="#">Browse All</a></li>
+           <li><a <a href="http:https://srinivasa.live/">BIHER CANTEEN</a></li>
            <li><a id="about" class="nav_btns" href="about.html">Biher weekly</a></li>
            <li><a id="contribute" class="nav_btns" href="contribute.html">CGPA calculator</a></li>
          </ul>
