--- a/about.html
+++ b/about.html
@@ -10,7 +10,8 @@
 <div class="head">
     <div class="headerobjectswrapper">
         <div class="weatherforcastbox"><span style="font-style: italic;">Weatherforcast for the next 24 hours: Plenty of Sunshine</span><br><span>Wind: 7km/h SSE; Ther: 21°C; Hum: 82%</span></div>
-        <header>Newpost York</header>
+        <header>BIHER WEEKLY</header>
+	    <img src="https://www.bharathuniv.ac.in/result/img/logo.png">
     </div>
 
     <div class="subhead">York, MA - Thursday August 30, 1978 - Seven Pages</div>
