--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 	    <img src="https://image3.mouthshut.com/images/imagesp/925968520s.png" height=120px: weight=120px:>
     </div>
 
-    <div class="subhead">York, MA - Thursday August 30, 1978 - Seven Pages</div>
+    <div class="subhead">BIHER  - Thursday maech 3, 2022 - Seven Pages</div>
 </div>
 <div class="content">
     <div class="collumns">
