--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
        </div>
        <div class="bottom-info_block">
          <ul>
-           <li><a id="about" class="nav_btns" href="about">ABOUT</a></li>
+           <li><a id="support" class="nav_btns" href="https://sylviapap.github.io/chatbot/">SUPPORT</a></li>
            <li><a id="about" class="nav_btns" href="about.html">Biher weekly</a></li>
            <li><a id="contribute" class="nav_btns" href="contribute.html">CGPA calculator</a></li>
          </ul>
