--- a/support.html
+++ b/support.html
@@ -99,16 +99,16 @@
 
     <div class="box">
         <div style="text-align: center;" class="top">
-            <h1>How can i help you !</h1>
+            <h1>BHARATH BOT IS ACTIVE NOW</h1>
         </div>
         <div class="mid">
             <div class="chat">
                 <h2>clarificatons Are Below</h2>
-                <p id="chatLog">BHARATH BOT IS AVTIVE NOW</p>
+                <p id="chatLog">BHARATH BOT IS AVTIVE NOW <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/325/large-green-circle_1f7e2.png "height=20px></p>
             </div>
         </div>
         <div class="input">
-            <input type="text" id="userBox" onkeydown="if(event.keyCode == 13){ talk() }" placeholder="Type A Message">
+            <input type="text" id="userBox" onkeydown="if(event.keyCode == 13){ talk() }" placeholder="How can i help you?">
         </div>
     </div>
 
