--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
      </div>
      <div class="branch_block">
        <h2>AVAILABLE BRANCHS>
-       <div class="branch_cards_block d-flex flex-row">
+                              <div class="d-flex flex-row">
+       <div class="branch_cards_block ">
          <div class="the_card">
            <a class="card_content">
              <h1>DEVoloping</h1>
