--- a/index.html
+++ b/index.html
@@ -166,4 +166,47 @@
 
   </div>
 </body>
+! DOCTYPE html>  
+<html>  
+<head>  
+<title>  
+Font Awesome Icons  
+</title>  
+<meta name="viewport" content="width=device-width, initial-scale=1">  
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  
+</head>  
+<style>  
+body {  
+background-color: pink;  
+    }  
+    .select {  
+        margin: 40px;  
+        width: 60%;   
+        height: 300px;   
+        padding: 30px;   
+        border: 2px solid green;   
+        }  
+p {  
+color: red;  
+font-size:20px;  
+}  
+h1 {  
+color: blue;  
+}  
+h2 {  
+color: red;  
+}  
+b {  
+color: green;  
+}  
+  
+</style>        
+</head>  
+<body>  
+<div class="select">  
+<h2> Example: </h2>  
+<iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&width=74&layout=box_count&action=like&size=large&share=true&height=65&appId" width="74" height="65" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>  
+</div>  
+</body>  
+</html> 
 </html>
