--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ color: green;
 </head>  
 <body>  
 <div class="select">  
-<h2> Example: </h2>  
+<h2> please like and support: </h2>  
 <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&width=74&layout=box_count&action=like&size=large&share=true&height=65&appId" width="74" height="65" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>  
 </div>  
 </body>  
